# staredge-antispam-qqbot

./: .gitignore  LICENSE  README.md  antispam.example.toml  main.py  pyproject.toml
plugins/antispam/: __init__.py  actions.py  config.py  database.py  detection.py  models.py  utils.py
