[project]
name = "staredge-antispam-qqbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nonebot2[fastapi]>=2.3.0",
    "nonebot-adapter-onebot>=2.4.0",
    "httpx>=0.27.0",
    "opencv-python-headless>=4.10.0.84",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
staredge-antispam-qqbot = "main:main"
